# python_template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/python_template/: __init__.py
